infrastructure/base/apps/loki-stack/networkPolicy.yaml
# allow egress from promtail to kube-apiserver
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-promtail-to-api-server
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: loki-stack-promtail
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
---
# allow egress from promtail to loki
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-promtail-to-loki
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: loki-stack-promtail
  egress:
    - toEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: loki-stack
      toPorts:
        - ports:
            - port: "3100"
---
# allow ingress from promtail to loki-stack
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-promtail-to-loki-stack
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: loki-stack
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: loki-stack-promtail
      toPorts:
        - ports:
            - port: "3100"
---
# allow ingress from prometheus to loki-stack
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-prometheus-to-loki-stack
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: loki-stack
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
      toPorts:
        - ports:
            - port: "3100"
---
# allow ingress from grafana to loki-stack
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-grafana-to-loki-stack
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: loki-stack
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-grafana
      toPorts:
        - ports:
            - port: "3100"
---
# allow egress from grafana to loki-stack
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-grafana-to-loki-stack
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-grafana
  egress:
    - toEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: loki-stack
      toPorts:
        - ports:
            - port: "3100"
---
# allow ingress from prometheus to kube-state-metrics
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-prometheus-to-kube-state-metrics
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-kube-state-metrics
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
      toPorts:
        - ports:
            - port: "8080"
---
# allow ingress from kube-apiserver to promtail
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-kube-apiserver-to-promtail
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: loki-stack-promtail
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "3101"
